--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "electron-updater": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-split": "^2.0.14"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
